platform/yapi-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yapi-http
  namespace: platform-prod
  annotations:
    ingress.vke.volcengine.com/address-type: internet
    ingress.vke.volcengine.com/target-type: instance
    ingress.vke.volcengine.com/backend-protocol: HTTP
    ingress.vke.volcengine.com/alb-instance-id: alb-1pg8j4wnye0w0845wfacnard9
    ingress.vke.volcengine.com/health-check-host: yapi.chekkk.com
    ingress.vke.volcengine.com/health-check-path: /
    ingress.vke.volcengine.com/success-codes: "200,301,302"
    ingress.vke.volcengine.com/loadbalancer-port: "80"
    ingress.vke.volcengine.com/loadbalancer-protocol: http
spec:
  ingressClassName: chek-prod-alb
  rules:
    - host: yapi.chekkk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yapi-http-redirect
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yapi-https
  namespace: platform-prod
  annotations:
    ops.chek/reconcile: "force-2025-11-12T20:12Z"
    ingress.vke.volcengine.com/address-type: internet
    ingress.vke.volcengine.com/target-type: instance
    ingress.vke.volcengine.com/backend-protocol: HTTP
    ingress.vke.volcengine.com/alb-instance-id: alb-1pg8j4wnye0w0845wfacnard9
    ingress.vke.volcengine.com/alb-instance-name: chek-prod-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    ingress.vke.volcengine.com/health-check-host: yapi.chekkk.com
    ingress.vke.volcengine.com/health-check-path: /
    ingress.vke.volcengine.com/success-codes: "200,301,302"
    ingress.vke.volcengine.com/loadbalancer-port: "443"
    ingress.vke.volcengine.com/loadbalancer-protocol: https
    alb.ingress.kubernetes.io/certificate-ids: cert-04cc9e57f1b34a4ca9a0c834b2d3784b
spec:
  ingressClassName: chek-prod-alb
  rules:
    - host: yapi.chekkk.com
      http:
        paths:
          - path: /feishu-sso/
            pathType: Prefix
            backend:
              service:
                name: yapi
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yapi
                port:
                  number: 80
